ss_admin_console/main/default/objects/ResultLogEvent__e/ResultLogEvent__e.object-meta.xml
<CustomObject>
    <label>ResultLogEvent</label>
    <pluralLabel>ResultLogEvents</pluralLabel>
</CustomObject>