ss_admin_console/main/default/objects/ResultLogEvent__e/fields/Action_Completed__c.field-meta.xml
<CustomField>
    <fullName>Action_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Action Completed</label>
    <type>Checkbox</type>
</CustomField>