ss_admin_console/main/default/objects/ResultLogEvent__e/fields/Action_Message__c.field-meta.xml
<CustomField>
    <fullName>Action_Message__c</fullName>
    <label>Action Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>