ss_admin_console/main/default/objects/ResultLogEvent__e/fields/Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Name__c</fullName>
    <label>Action Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>