ss_admin_console/main/default/objects/ResultLogEvent__e/fields/Action_Status__c.field-meta.xml
<CustomField>
    <fullName>Action_Status__c</fullName>
    <label>Action Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>