ss_admin_console/main/default/objects/ResultLogEvent__e/fields/Action_Title__c.field-meta.xml
<CustomField>
    <fullName>Action_Title__c</fullName>
    <label>Action Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>